Sebastian - Use minified/production resources

--- a/views/contact.html
+++ b/views/contact.html
@@ -15,4 +15,4 @@
   <a href="http://www.facebook.com/sjespersen" target="_blank">Facebook</a><br>
   <a href="http://www.flickr.com/photos/sjespersen" target="_blank">Flickr</a><br>
   Location: San Francisco Bay Area, CA
-</div>
+</p></div>
