--- a/views/main.html
+++ b/views/main.html
@@ -9,7 +9,7 @@
 </div>
 <div id="scroller">
   <div id="content">
-    <ul><li ng:repeat="item in items"><img ng-src="{{item.url_z}}"/></li></ul>
+    <ul><li ng:repeat="item in items"><img ng-src="{{item.url_z}}"></li></ul>
   </div>
 </div>
-<span ng-show='error'>error:{{error}}</span>
+<span ng-show="error">error:{{error}}</span>
