--- a/views/contact.html
+++ b/views/contact.html
@@ -1,6 +1,6 @@
 <div id="header">
   <h1>Sebastian Jespersen</h1>
-  <h2>Fashion and Beauty Photographer in San&nbsp;Francisco, CA</h2>
+  <h2>Fashion and Beauty Photographer in Hamburg, Germany</h2>
   <ul>
     <li><a href="/">Portfolio</a></li>
     <li><a href="http://vimeo.com/17318784" target="_blank">Video</a></li>
