Change contact info

--- a/views/contact.html
+++ b/views/contact.html
@@ -10,9 +10,8 @@
 <div id="content" class="contact">
   <p>
   Sebastian Jespersen<br>
-  (858) 947 8392<br>
   <a href="mailto:email@sebastian-jespersen.com">email@sebastian-jespersen.com</a><br>
   <a href="http://www.facebook.com/sjespersen" target="_blank">Facebook</a><br>
   <a href="http://www.flickr.com/photos/sjespersen" target="_blank">Flickr</a><br>
-  Location: San Francisco Bay Area, CA
+  Location: Hamburg, Germany
 </p></div>
